--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,21 +5,18 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "flutter_application_1",
-            "cwd": "flutter_application_1",
+            "name": "flutter-skilaverkefni-3",
             "request": "launch",
             "type": "dart"
         },
         {
-            "name": "flutter_application_1 (profile mode)",
-            "cwd": "flutter_application_1",
+            "name": "flutter-skilaverkefni-3 (profile mode)",
             "request": "launch",
             "type": "dart",
             "flutterMode": "profile"
         },
         {
-            "name": "flutter_application_1 (release mode)",
-            "cwd": "flutter_application_1",
+            "name": "flutter-skilaverkefni-3 (release mode)",
             "request": "launch",
             "type": "dart",
             "flutterMode": "release"
